# tflitec-rs-fork

./: Cargo.toml  build.rs
src/: interpreter.rs  lib.rs  minimal_bindings.rs  model.rs  tensor.rs
