[package]
name = "tflitec"
version = "0.7.0-minimal"
authors = ["ebraraktas <ebrar@voys.ai>", "AI Assistant"]
edition = "2018"
license = "MIT"
description = "A minimal, high-performance Rust wrapper for TensorFlow Lite C API with native XNNPACK support"
repository = "https://github.com/agent-edge-rs/tflitec-rs"
keywords = ["bindings", "tensorflow", "machine-learning", "xnnpack", "minimal"]
categories = ["api-bindings", "science"]

[lib]
name = "tflitec"

[dependencies]
# No runtime dependencies needed - we use direct C bindings

[build-dependencies]
# Minimal build dependencies - no bindgen needed!

[features]
default = ["xnnpack"]
xnnpack = []
xnnpack_qu8 = ["xnnpack"]
xnnpack_qs8 = ["xnnpack"]

# docs.rs configuration
[package.metadata.docs.rs]
features = ["xnnpack"]
default-target = "x86_64-unknown-linux-gnu"
